--- a/charts/sptribs-case-api/values.preview.template.yaml
+++ b/charts/sptribs-case-api/values.preview.template.yaml
@@ -10,11 +10,10 @@ java:
     CASE_DOCUMENT_AM_BASEURL: http://${SERVICE_NAME}-ccd-case-document-am-api
     BUNDLING_API_URL: https://em-ccdorc-${SERVICE_FQDN}
     CITIZEN_UPDATE_CASE_STATE_ENABLED: true
-    POSTGRES_HOST: sptribs-preview.postgres.database.azure.com
+    POSTGRES_HOST: '{{ tpl .Values.global.postgresHostname $}}'
     POSTGRES_NAME: "{{ .Values.global.databaseNamePrefix }}sptribs-case-api"
     POSTGRES_USERNAME: ${SPTRIBS_POSTGRES_USERNAME_PREVIEW}
     POSTGRES_CONNECTION_OPTIONS: ""
-
   keyVaults:
     sptribs:
       secrets:
@@ -39,6 +38,10 @@ java:
       secretRef: postgres
       key: PASSWORD
       disabled: false
+global:
+  postgresHostname: "sptribs-preview.postgres.database.azure.com"
+  postgresSecret: postgres
+  databaseNamePrefix: "pr-${CHANGE_ID}-"
 
 ccd:
   ccd:
@@ -69,9 +72,6 @@ ccd:
 #    postgresUsername: ${CCD_GLOBAL_POSTGRES_USERNAME_PREVIEW}
 #    postgresPassword: ${CCD_GLOBAL_POSTGRES_PASSWORD_PREVIEW}
     postgresUsername: hmcts
-    postgresHostname: "sptribs-preview.postgres.database.azure.com"
-    postgresSecret: postgres
-    databaseNamePrefix: "pr-${CHANGE_ID}-"
     s2sUrl: http://rpe-service-auth-provider-aat.service.core-compute-aat.internal
 
   ccd-api-gateway-web:
@@ -94,8 +94,8 @@ ccd:
 #        DATA_STORE_DB_HOST: ${SERVICE_NAME}-postgresql
 #        DATA_STORE_DB_USERNAME: ${CCD_DATA_STORE_DB_USERNAME_PREVIEW}
 #        DATA_STORE_DB_PASSWORD: ${CCD_DATA_STORE_DB_PASSWORD_PREVIEW}
-        DATA_STORE_DB_HOST: sptribs-preview.postgres.database.azure.com
-        DATA_STORE_DB_NAME: "pr-${CHANGE_ID}-data-store"
+        DATA_STORE_DB_HOST: '{{ tpl .Values.global.postgresHostname $}}'
+        DATA_STORE_DB_NAME: " {{ .Values.global.databaseNamePrefix }}data-store"
         DATA_STORE_DB_USERNAME: hmcts
         DATA_STORE_IDAM_KEY: ${DATA_STORE_S2S_KEY}
         DATA_STORE_DEFAULT_LOG_LEVEL: info
@@ -156,7 +156,7 @@ ccd:
         CCD_DATA_STORE_URL: http://{{ .Release.Name }}-ccd-data-store-api
         RUN_LD_ON_STARTUP: false
         ROLE_ASSIGNMENT_DB_HOST: '{{ tpl .Values.global.postgresHostname $}}'
-        ROLE_ASSIGNMENT_DB_NAME: "pr-${CHANGE_ID}-role-assignment"
+        ROLE_ASSIGNMENT_DB_NAME: " {{ .Values.global.databaseNamePrefix }}role-assignment"
         ROLE_ASSIGNMENT_DB_OPTIONS: "?stringtype=unspecified&ssl=disable&gssEncMode=disable"
         ROLE_ASSIGNMENT_DB_USERNAME: ${SPTRIBS_POSTGRES_USERNAME_PREVIEW}
       secrets:
@@ -176,13 +176,12 @@ ccd:
         ELASTIC_SEARCH_ENABLED: true
         ELASTIC_SEARCH_HOST: ${SERVICE_NAME}-es-master
         DEFINITION_STORE_DB_USERNAME: hmcts
-        DEFINITION_STORE_DB_NAME: "pr-${CHANGE_ID}-definition-store"
+        DEFINITION_STORE_DB_NAME: "{{ .Values.global.databaseNamePrefix }}definition-store"
       secrets:
         DEFINITION_STORE_DB_PASSWORD:
           secretRef: postgres
           key: PASSWORD
           disabled: false
-      keyVaults: [ ]
       ingressHost: ccd-definition-store-${SERVICE_FQDN}
       autoscaling:
         enabled: false
@@ -196,7 +195,7 @@ ccd:
       imagePullPolicy: Always
       environment:
         USER_PROFILE_DB_HOST: '{{ tpl .Values.global.postgresHostname $}}'
-        USER_PROFILE_DB_NAME: "pr-${CHANGE_ID}-user-profile"
+        USER_PROFILE_DB_NAME: "{{ .Values.global.databaseNamePrefix }}user-profile"
         USER_PROFILE_DB_USERNAME: hmcts
       ingressHost: ccd-user-profile-api-${SERVICE_FQDN}
       secrets:
@@ -229,7 +228,7 @@ ccd:
       userProfileDatabaseUser: hmcts
 #      userProfileDatabaseUser: ${CCD_USER_PROFILE_DB_USERNAME_PREVIEW}
 #      userProfileDatabasePassword: ${CCD_USER_PROFILE_DB_PASSWORD_PREVIEW}
-      userProfileDatabaseName: "pr-${CHANGE_ID}-user-profile"
+      userProfileDatabaseName: "{{ .Values.global.databaseNamePrefix }}user-profile"
       secrets:
         userProfileDatabasePassword:
           secretRef: postgres
@@ -248,7 +247,7 @@ ccd:
 #    userProfileDatabasePort: 5432
 #    userProfileDatabaseUser: hmcts
 #    userProfileDatabasePassword: hmcts
-#    userProfileDatabaseName: "pr-${CHANGE_ID}-user-profile"
+#    userProfileDatabaseName: " {{ .Values.global.databaseNamePrefix }}user-profile"
 
   elasticsearch:
     nameOverride: ${SERVICE_NAME}-es
@@ -574,8 +573,8 @@ em-stitching:
       S2S_BASE_URI: http://rpe-service-auth-provider-aat.service.core-compute-aat.internal
       DM_STORE_APP_URL: http://dm-store-aat.service.core-compute-aat.internal
       CDAM_URL: http://${SERVICE_NAME}-ccd-case-document-am-api
-      SPRING_DATASOURCE_HOST: sptribs-preview.postgres.database.azure.com
-      SPRING_DATASOURCE_NAME: "pr-${CHANGE_ID}-emstitch"
+      SPRING_DATASOURCE_HOST: '{{ tpl .Values.global.postgresHostname $}}'
+      SPRING_DATASOURCE_NAME: " {{ .Values.global.databaseNamePrefix }}emstitch"
       SPRING_DATASOURCE_OPTIONS: "?ssl=disable"
       SPRING_DATASOURCE_PORT: 5432
       SPRING_DATASOURCE_USERNAME: hmcts
@@ -594,12 +593,12 @@ postgresql:
   flexibleserver: sptribs-preview
   setup:
     databases:
-      - name: "pr-${CHANGE_ID}-sptribs-case-api"
-      - name: "pr-${CHANGE_ID}-data-store"
-      - name: "pr-${CHANGE_ID}-definition-store"
-      - name: "pr-${CHANGE_ID}-user-profile"
-      - name: "pr-${CHANGE_ID}-role-assignment"
-      - name: "pr-${CHANGE_ID}-emstitch"
+      - name: " {{ .Values.global.databaseNamePrefix }}sptribs-case-api"
+      - name: " {{ .Values.global.databaseNamePrefix }}data-store"
+      - name: " {{ .Values.global.databaseNamePrefix }}definition-store"
+      - name: " {{ .Values.global.databaseNamePrefix }}user-profile"
+      - name: " {{ .Values.global.databaseNamePrefix }}role-assignment"
+      - name: " {{ .Values.global.databaseNamePrefix }}emstitch"
 
 servicebus:
   enabled: false
