--- a/charts/sptribs-case-api/values.preview.template.yaml
+++ b/charts/sptribs-case-api/values.preview.template.yaml
@@ -10,9 +10,10 @@ java:
     CASE_DOCUMENT_AM_BASEURL: http://${SERVICE_NAME}-ccd-case-document-am-api
     BUNDLING_API_URL: https://em-ccdorc-${SERVICE_FQDN}
     CITIZEN_UPDATE_CASE_STATE_ENABLED: true
-    POSTGRES_HOST: '{{ tpl .Values.global.postgresHostname $}}'
-    POSTGRES_NAME: "{{ .Values.global.databaseNamePrefix }}sptribs-case-api"
+    POSTGRES_HOST: ${SERVICE_NAME}-postgresql
+    POSTGRES_NAME: sptribs-case-api
     POSTGRES_USERNAME: ${SPTRIBS_POSTGRES_USERNAME_PREVIEW}
+    POSTGRES_PASSWORD: ${SPTRIBS_POSTGRES_USERNAME_PREVIEW}
     POSTGRES_CONNECTION_OPTIONS: ""
   keyVaults:
     sptribs:
@@ -33,11 +34,55 @@ java:
           alias: IDAM_SYSTEM_UPDATE_PASSWORD
         - name: launchdarkly-sdk-key
           alias: LAUNCH_DARKLY_SDK_KEY
+        - name: sptribs-postgres-username-preview
+          alias: SPTRIBS_POSTGRES_USERNAME_PREVIEW
+        - name: sptribs-postgres-password-preview
+          alias: SPTRIBS_POSTGRES_PASSWORD_PREVIEW
+        - name: ccd-global-postgres-username-preview
+          alias: CCD_GLOBAL_POSTGRES_USERNAME_PREVIEW
+        - name: ccd-global-postgres-password-preview
+          alias: CCD_GLOBAL_POSTGRES_PASSWORD_PREVIEW
+        - name: ccd-data-store-db-username-preview
+          alias: CCD_DATA_STORE_DB_USERNAME_PREVIEW
+        - name: ccd-data-store-db-password-preview
+          alias: CCD_DATA_STORE_DB_PASSWORD_PREVIEW
+        - name: ccd-user-profile-db-username-preview
+          alias: CCD_USER_PROFILE_DB_USERNAME_PREVIEW
+        - name: ccd-user-profile-db-password-preview
+          alias: CCD_USER_PROFILE_DB_PASSWORD_PREVIEW
+        - name: em-spring-datasource-username-preview
+          alias: EM_SPRING_DATASOURCE_USERNAME_PREVIEW
+        - name: em-spring-datasource-password-preview
+          alias: EM_SPRING_DATASOURCE_PASSWORD_PREVIEW
   secrets:
     POSTGRES_PASSWORD:
       secretRef: postgres
       key: PASSWORD
-      disabled: false
+      disabled: true
+
+  postgresql:
+    enabled: true
+    image:
+      tag: '11.6.0'
+    primary:
+      persistence:
+        enabled: false
+      resources:
+        requests:
+          cpu: 25m
+      initdb:
+        scripts:
+          init.sql: |
+            CREATE DATABASE "sptribs-case-api" WITH OWNER = hmcts ENCODING = 'UTF-8' CONNECTION LIMIT = -1;
+            CREATE DATABASE "data-store" WITH OWNER = hmcts ENCODING = 'UTF-8' CONNECTION LIMIT = -1;
+            CREATE DATABASE "definition-store" WITH OWNER = hmcts ENCODING = 'UTF-8' CONNECTION LIMIT = -1;
+            CREATE DATABASE "role_assignment" WITH OWNER = hmcts ENCODING = 'UTF-8' CONNECTION LIMIT = -1;
+            CREATE DATABASE "user-profile" WITH OWNER = hmcts ENCODING = 'UTF-8' CONNECTION LIMIT = -1;
+            CREATE DATABASE "emstitch" WITH OWNER = hmcts ENCODING = 'UTF-8' CONNECTION LIMIT = -1;
+    auth:
+      username: ${SPTRIBS_POSTGRES_USERNAME_PREVIEW}
+      password: ${SPTRIBS_POSTGRES_PASSWORD_PREVIEW}
+
 global:
   postgresHostname: "sptribs-preview.postgres.database.azure.com"
   postgresSecret: postgres
@@ -66,11 +111,8 @@ ccd:
     dmStoreUrl: http://dm-store-aat.service.core-compute-aat.internal
     ccdAdminWebIngress: admin-web-${SERVICE_FQDN}
     ccdApiGatewayIngress: gateway-${SERVICE_FQDN}
-#    ccdDataStoreUrl: http://${SERVICE_NAME}-ccd-data-store-api
-#    ccdDefinitionStoreUrl: http://${SERVICE_NAME}-ccd-definition-store
-#    ccdUserProfileUrl: http://${SERVICE_NAME}-ccd-user-profile-api
     postgresUsername: ${CCD_GLOBAL_POSTGRES_USERNAME_PREVIEW}
-#    postgresPassword: ${CCD_GLOBAL_POSTGRES_PASSWORD_PREVIEW}
+    postgresPassword: ${CCD_GLOBAL_POSTGRES_PASSWORD_PREVIEW}
     s2sUrl: http://rpe-service-auth-provider-aat.service.core-compute-aat.internal
 
   ccd-api-gateway-web:
@@ -90,9 +132,9 @@ ccd:
       imagePullPolicy: Always
       environment:
         CASE_DOCUMENT_AM_API_ATTACH_DOCUMENT_ENABLED: true
-        DATA_STORE_DB_HOST: '{{ tpl .Values.global.postgresHostname $}}'
-        DATA_STORE_DB_NAME: "{{ .Values.global.databaseNamePrefix }}data-store"
-        DATA_STORE_DB_USERNAME: ${CCD_GLOBAL_POSTGRES_USERNAME_PREVIEW}
+        DATA_STORE_DB_HOST: ${SERVICE_NAME}-postgresql
+        DATA_STORE_DB_USERNAME: ${CCD_DATA_STORE_DB_USERNAME_PREVIEW}
+        DATA_STORE_DB_PASSWORD: ${CCD_DATA_STORE_DB_PASSWORD_PREVIEW}
         DATA_STORE_IDAM_KEY: ${DATA_STORE_S2S_KEY}
         DATA_STORE_DEFAULT_LOG_LEVEL: info
         LOG_CALLBACK_DETAILS: "*"
@@ -111,14 +153,19 @@ ccd:
         IDAM_DATA_STORE_SYSTEM_USER_USERNAME: ${IDAM_DATA_STORE_SYSTEM_USER_USERNAME}
         IDAM_DATA_STORE_SYSTEM_USER_PASSWORD: ${IDAM_DATA_STORE_SYSTEM_USER_PASSWORD}
         ROLE_ASSIGNMENT_URL: http://sptribs-case-api-pr-${CHANGE_ID}-am-role-assignment-service
+        DATA_STORE_DB_OPTIONS: "?stringtype=unspecified"
       secrets:
         DATA_STORE_DB_PASSWORD:
-          secretRef: postgres
+          secretRef: "{{ .Values.global.postgresSecret }}"
           key: PASSWORD
-          disabled: false
+          disabled: true
       keyVaults:
         ccd:
           secrets:
+            - name: data-store-api-POSTGRES-USER-V15
+              alias: DATA_STORE_DB_USERNAME
+            - name: data-store-api-POSTGRES-PASS-V15
+              alias: DATA_STORE_DB_PASSWORD
             - name: data-store-api-draft-key
               alias: CCD_DRAFT_ENCRYPTION_KEY
             - name: ccd-data-s2s-secret
@@ -147,33 +194,33 @@ ccd:
       environment:
         CCD_DATA_STORE_URL: http://{{ .Release.Name }}-ccd-data-store-api
         RUN_LD_ON_STARTUP: false
-        ROLE_ASSIGNMENT_DB_HOST: '{{ tpl .Values.global.postgresHostname $}}'
-        ROLE_ASSIGNMENT_DB_NAME: "{{ .Values.global.databaseNamePrefix }}role-assignment"
-        ROLE_ASSIGNMENT_DB_OPTIONS: "?stringtype=unspecified&ssl=disable&gssEncMode=disable"
-        ROLE_ASSIGNMENT_DB_USERNAME: ${CCD_GLOBAL_POSTGRES_USERNAME_PREVIEW}
+        ROLE_ASSIGNMENT_DB_HOST: ${SERVICE_NAME}-postgresql
+        ROLE_ASSIGNMENT_DB_PASSWORD: '{{ tpl .Values.global.postgresPassword $}}'
+        ROLE_ASSIGNMENT_DB_NAME: "role_assignment"
+        ROLE_ASSIGNMENT_DB_OPTIONS: "?stringtype=unspecified"
       secrets:
         ROLE_ASSIGNMENT_DB_PASSWORD:
-          secretRef: postgres
+          secretRef: "{{ .Values.global.postgresSecret }}"
           key: PASSWORD
-          disabled: false
+          disabled: true
 
   ccd-definition-store-api:
     java:
       disableKeyVaults: true
       imagePullPolicy: Always
       environment:
-        DEFINITION_STORE_DB_HOST: '{{ tpl .Values.global.postgresHostname $}}'
+        DEFINITION_STORE_DB_HOST: ${SERVICE_NAME}-postgresql
+        DEFINITION_STORE_DB_PASSWORD: '{{ tpl .Values.global.postgresPassword $}}'
+        DEFINITION_STORE_DB_OPTIONS: ""
         DEFINITION_STORE_IDAM_KEY: ${DEFINITION_STORE_S2S_KEY}
         IDAM_USER_URL: https://idam-web-public.aat.platform.hmcts.net
         ELASTIC_SEARCH_ENABLED: true
         ELASTIC_SEARCH_HOST: ${SERVICE_NAME}-es-master
-        DEFINITION_STORE_DB_USERNAME: hmcts
-        DEFINITION_STORE_DB_NAME: "{{ .Values.global.databaseNamePrefix }}definition-store"
       secrets:
         DEFINITION_STORE_DB_PASSWORD:
-          secretRef: postgres
+          secretRef: "{{ .Values.global.postgresSecret }}"
           key: PASSWORD
-          disabled: false
+          disabled: true
       ingressHost: ccd-definition-store-${SERVICE_FQDN}
       autoscaling:
         enabled: false
@@ -186,15 +233,15 @@ ccd:
       disableKeyVaults: true
       imagePullPolicy: Always
       environment:
-        USER_PROFILE_DB_HOST: '{{ tpl .Values.global.postgresHostname $}}'
-        USER_PROFILE_DB_NAME: "{{ .Values.global.databaseNamePrefix }}user-profile"
-        USER_PROFILE_DB_USERNAME: ${CCD_GLOBAL_POSTGRES_USERNAME_PREVIEW}
+        USER_PROFILE_DB_HOST: ${SERVICE_NAME}-postgresql
+        USER_PROFILE_DB_OPTIONS: "?stringtype=unspecified"
+        USER_PROFILE_DB_PASSWORD: '{{ tpl .Values.global.postgresPassword $}}'
+        secrets:
+          USER_PROFILE_DB_PASSWORD:
+            secretRef: "{{ .Values.global.postgresSecret }}"
+            key: PASSWORD
+            disabled: true
       ingressHost: ccd-user-profile-api-${SERVICE_FQDN}
-      secrets:
-        USER_PROFILE_DB_PASSWORD:
-          secretRef: postgres
-          key: PASSWORD
-          disabled: false
 
   ccd-admin-web:
     nodejs:
@@ -215,29 +262,16 @@ ccd:
         - st_caseworker@mailinator.com|ST_CIC|CIC|Submitted
         - st_solicitor@mailinator.com|ST_CIC|CIC|Submitted
         - st_super@mailinator.com|ST_CIC|CIC|Submitted
-      userProfileDatabaseHost: '{{ tpl .Values.global.postgresHostname $}}'
+      userProfileDatabaseHost: ${SERVICE_NAME}-ccd-postgres
       userProfileDatabasePort: 5432
-      userProfileDatabaseUser: ${CCD_GLOBAL_POSTGRES_USERNAME_PREVIEW}
-      userProfileDatabaseName: "{{ .Values.global.databaseNamePrefix }}user-profile"
+      userProfileDatabaseUser: ${CCD_USER_PROFILE_DB_USERNAME_PREVIEW}
+      userProfileDatabasePassword: ${CCD_USER_PROFILE_DB_PASSWORD_PREVIEW}
+      userProfileDatabaseName: user-profile
       secrets:
         userProfileDatabasePassword:
-          secretRef: postgres
+          secretRef: "{{ .Values.global.postgresSecret }}"
           key: PASSWORD
-          disabled: false
-
-#  ccd-user-profile-importer:
-#    enabled: true
-#    jurisdictions:
-#      - ST_CIC
-#    users:
-#      - st_caseworker@mailinator.com|ST_CIC|CIC|Submitted
-#      - st_solicitor@mailinator.com|ST_CIC|CIC|Submitted
-#      - st_super@mailinator.com|ST_CIC|CIC|Submitted
-#    userProfileDatabaseHost: '{{ tpl .Values.global.postgresHostname $}}'
-#    userProfileDatabasePort: 5432
-#    userProfileDatabaseUser: hmcts
-#    userProfileDatabasePassword: hmcts
-#    userProfileDatabaseName: "{{ .Values.global.databaseNamePrefix }}user-profile"
+          disabled: true
 
   elasticsearch:
     nameOverride: ${SERVICE_NAME}-es
@@ -281,15 +315,9 @@ ccd:
     extraVolumes: |
       - name: logstash-lib
         emptyDir: {}
-      - name: database-secret-volume
-        secret:
-          secretName: postgres
     extraVolumeMounts: |
       - name: logstash-lib
         mountPath: /usr/share/logstash/ccd
-      - name: database-secret-volume
-        mountPath: /etc/logstash/secrets
-        readOnly: true
     logstashConfig:
       logstash.yml: |
         http.host: 0.0.0.0
@@ -305,9 +333,9 @@ ccd:
       01_input.conf: |
         input  {
           jdbc {
-            jdbc_connection_string => "jdbc:postgresql://sptribs-preview.postgres.database.azure.com-postgresql:5432/pr-${CHANGE_ID}-data-store?sslmode-require&stringtype=unspecified"
+            jdbc_connection_string => "jdbc:postgresql://{{ .Release.Name }}-postgresql:5432/data-store?stringtype=unspecified"
             jdbc_user => "hmcts"
-            jdbc_password_filepath => "/etc/logstash/secrets/PASSWORD"
+            jdbc_password => "hmcts"
             jdbc_validate_connection => true
             jdbc_driver_library => "/usr/share/logstash/ccd/postgresql.jar"
             jdbc_driver_class => "org.postgresql.Driver"
@@ -563,32 +591,33 @@ em-stitching:
       S2S_BASE_URI: http://rpe-service-auth-provider-aat.service.core-compute-aat.internal
       DM_STORE_APP_URL: http://dm-store-aat.service.core-compute-aat.internal
       CDAM_URL: http://${SERVICE_NAME}-ccd-case-document-am-api
-      SPRING_DATASOURCE_HOST: '{{ tpl .Values.global.postgresHostname $}}'
-      SPRING_DATASOURCE_NAME: "{{ .Values.global.databaseNamePrefix }}emstitch"
+      SPRING_DATASOURCE_HOST: ${SERVICE_NAME}-postgresql
+      SPRING_DATASOURCE_NAME: emstitch
       SPRING_DATASOURCE_OPTIONS: "?ssl=disable"
       SPRING_DATASOURCE_PORT: 5432
-      SPRING_DATASOURCE_USERNAME: ${EM_SPRING_DATASOURCE_PASSWORD_PREVIEW}
+      SPRING_DATASOURCE_USERNAME: ${EM_SPRING_DATASOURCE_USERNAME_PREVIEW}
+      SPRING_DATASOURCE_PASSWORD: ${EM_SPRING_DATASOURCE_PASSWORD_PREVIEW}
       ENABLE_DB_MIGRATE: true
       RUN_DB_MIGRATION_ON_STARTUP: true
       FLYWAY_POSTGRESQL_TRANSACTIONAL_LOCK: false
       LOGGING_LEVEL_UK_GOV_HMCTS_REFORM_EM: DEBUG
     secrets:
       SPRING_DATASOURCE_PASSWORD:
-        secretRef: postgres
+        secretRef: "{{ .Values.global.postgresSecret }}"
         key: PASSWORD
-        disabled: false
+        disabled: true
 
-postgresql:
-  enabled: true
-  flexibleserver: sptribs-preview
-  setup:
-    databases:
-      - name: "{{ .Values.global.databaseNamePrefix }}sptribs-case-api"
-      - name: "{{ .Values.global.databaseNamePrefix }}data-store"
-      - name: "{{ .Values.global.databaseNamePrefix }}definition-store"
-      - name: "{{ .Values.global.databaseNamePrefix }}user-profile"
-      - name: "{{ .Values.global.databaseNamePrefix }}role-assignment"
-      - name: "{{ .Values.global.databaseNamePrefix }}emstitch"
+#postgresql:
+#  enabled: true
+#  flexibleserver: sptribs-preview
+#  setup:
+#    databases:
+#      - name: "{{ .Values.global.databaseNamePrefix }}sptribs-case-api"
+#      - name: "{{ .Values.global.databaseNamePrefix }}data-store"
+#      - name: "{{ .Values.global.databaseNamePrefix }}definition-store"
+#      - name: "{{ .Values.global.databaseNamePrefix }}user-profile"
+#      - name: "{{ .Values.global.databaseNamePrefix }}role-assignment"
+#      - name: "{{ .Values.global.databaseNamePrefix }}emstitch"
 
 servicebus:
   enabled: false
