--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,8 @@ buildscript {
     mavenLocal()
     mavenCentral()
     maven {
-      url "https://jitpack.io"
+      name = "AzureArtifacts"
+      url = uri('https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1')
       content {
         excludeGroup "com.github.ben-manes.versions"
       }
@@ -117,7 +118,7 @@ test {
   jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED','--add-opens=java.base/java.util=ALL-UNNAMED']
 }
 
-task functional(type: Test) {
+tasks.register('functional', Test) {
   if (System.getenv('WA_FUNCTIONAL_TESTS_ENABLED') == 'true') {
     maxParallelForks = Runtime.runtime.availableProcessors()
   }
@@ -125,7 +126,7 @@ task functional(type: Test) {
   group = "Verification"
   testClassesDirs = sourceSets.functionalTest.output.classesDirs
   classpath = sourceSets.functionalTest.runtimeClasspath
-  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED','--add-opens=java.base/java.util=ALL-UNNAMED']
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED', '--add-opens=java.base/java.util=ALL-UNNAMED']
 }
 
 task integration(type: Test) {
@@ -137,27 +138,27 @@ task integration(type: Test) {
 }
 
 // Invoked from CftLibConfig when booting with CCD.
-task buildCCDXlsx(type: Exec) {
+tasks.register('buildCCDXlsx', Exec) {
   group 'ccd tasks'
   commandLine './bin/ccd-build-definition.sh'
   inputs.dir layout.buildDirectory.dir('definitions')
   outputs.dir layout.buildDirectory.dir('ccd-config')
 }
 
-task smoke(type: Test) {
+tasks.register('smoke', Test) {
   description = "Runs Smoke Tests"
   setTestClassesDirs(sourceSets.functionalTest.output.classesDirs)
   setClasspath(sourceSets.functionalTest.runtimeClasspath)
   include "uk/gov/hmcts/sptribs/smoke/**"
 }
 
-task highLevelDataSetup(type: JavaExec) {
+tasks.register('highLevelDataSetup', JavaExec) {
   mainClass.set("uk.gov.hmcts.sptribs.common.ccd.HighLevelDataSetupApp")
   classpath += sourceSets.main.runtimeClasspath
-  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED','--add-opens=java.base/java.util=ALL-UNNAMED']
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED', '--add-opens=java.base/java.util=ALL-UNNAMED']
 }
 
-task fortifyScan(type: JavaExec)  {
+tasks.register('fortifyScan', JavaExec) {
   mainClass.set("uk.gov.hmcts.fortifyclient.FortifyClientMainApp")
   classpath += sourceSets.test.runtimeClasspath
   jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
@@ -284,7 +285,7 @@ dependencyManagement {
 repositories {
   mavenLocal()
   mavenCentral()
-  maven { url 'https://jitpack.io' }
+  maven { url 'https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1'}
 }
 
 def versions = [
@@ -325,10 +326,10 @@ dependencies {
   implementation 'io.swagger:swagger-annotations:1.6.16'
   implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.5.18'
   implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.5.18'
-  implementation group: 'com.github.hmcts', name: 'ccd-client', version: '5.1.1'
+  implementation group: 'com.github.hmcts', name: 'core-case-data-store-client', version: '5.1.1'
   implementation group: 'com.github.hmcts', name:'ccd-case-document-am-client', version: '1.59.2'
   implementation group: 'com.github.hmcts', name: 'idam-java-client', version: '3.0.4'
-  implementation group: 'com.github.hmcts', name: 'java-logging', version: '6.1.9'
+  implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: '6.1.9'
   implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '5.3.2'
   implementation group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '8.1'
   implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.25.0'
@@ -353,7 +354,7 @@ dependencies {
   implementation 'org.camunda.bpm:camunda-external-task-client:7.23.0'
 
   annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
-  testImplementation 'com.github.hmcts:fortify-client:1.4.8:all'
+  testImplementation 'com.github.hmcts:fortify-client:1.4.9'
 
   testImplementation group: 'jakarta.enterprise', name: 'jakarta.enterprise.cdi-api', version: '4.1.0'
   testImplementation libraries.junit5
@@ -412,7 +413,7 @@ dependencies {
 
 mainClassName = 'uk.gov.hmcts.sptribs.CaseApiApplication'
 
-task loadEnvSecrets() {
+tasks.register('loadEnvSecrets') {
   doLast {
     if (!project.file('./.aat-env').exists()) {
       new ByteArrayOutputStream().withStream { os ->
@@ -426,7 +427,8 @@ task loadEnvSecrets() {
   }
 }
 
-task reloadEnvSecrets(group: 'ccd tasks', dependsOn: [loadEnvSecrets]) {
+tasks.register('reloadEnvSecrets') {
+  dependsOn[loadEnvSecrets]
   doFirst {
     if (project.file('./.aat-env').exists()) {
       project.file('./.aat-env').delete()
@@ -547,7 +549,7 @@ configurations.cftlibTestImplementation {
   exclude group: 'ch.qos.logback', module: 'logback-classic'
 }
 
-task installChromium(type: JavaExec) {
+tasks.register('installChromium', JavaExec) {
   // group = "Execution"
   // description = "Run the main class with JavaExecTask"
   classpath = sourceSets.cftlibTest.runtimeClasspath
@@ -579,7 +581,7 @@ pact {
   }
 }
 
-task runAndPublishConsumerPactTests(type: Test){
+tasks.register('runAndPublishConsumerPactTests', Test) {
   logger.lifecycle("Runs consumer pact tests")
   systemProperty 'pact.rootDir', "pacts"
   useJUnitPlatform()
